# async-booking-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 02767011f4ff_add_hashed_password_column.py  707bb06754a7_initial_tables.py  c2d6308f44fe_add_resources_and_bookings_tables.py  e9168fc5396a_ensure_superuser_column_exists.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: bookings.py  login.py  resources.py  users.py
app/core/: config.py  security.py
app/crud/: crud_booking.py  crud_resource.py
app/db/: base.py  session.py
app/models/: booking.py  resource.py  user.py
app/schemas/: booking.py  resource.py  tokens.py  user.py
frontend/: fmain.py
