[project]
name = "system-design-booking-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "email-validator>=2.1.1",
    "fastapi>=0.110.0",
    "greenlet>=3.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.29",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.29.0",
]
